feat: optimize padding and spacing in StudentAttendancePage for better space utilization - Reduced excessive padding throughout the component - Made layout more compact while maintaining readability - Optimized calendar view to use maximum available height - Reduced header, main content, and card padding - Improved responsive spacing and layout efficiency - Enhanced full-screen space utilization with flexbox layout